@@ -860,12 +860,12 @@ void close_conn(
     snprintf(log_message, LOG_BUF_SIZE, "%s: svr_conn[%d] is idle", __func__, sd);
     log_event(PBSEVENT_SYSTEM,PBS_EVENTCLASS_NODE,"close_conn",log_message);
 
-    close(sd);
+/*    close(sd);
     svr_conn[sd].cn_addr = 0;
     svr_conn[sd].cn_handle = -1;
     svr_conn[sd].cn_active = Idle;
     svr_conn[sd].cn_func = (void *(*)())0;
-    svr_conn[sd].cn_authen = 0;
+    svr_conn[sd].cn_authen = 0;*/
     
     pthread_mutex_unlock(svr_conn[sd].cn_mutex);
     return;
